# webgemini-cli

./: .gitignore  AGENTS.md  GemiTerm.spec  README.md  install.ps1  package.json  pyproject.toml  requirements.txt  test-export.md  tsconfig.json
.github/workflows/: release.yml
.maestro/playbooks/2025-03-21-Evolve/: EVOLVE-01.md  EVOLVE-02.md  EVOLVE-03.md  EVOLVE-04.md  EVOLVE-05.md  EVOLVE-06.md
.maestro/playbooks/2026-03-22-Geminicli-Implementor/: Phase-01-Browser-Config-Foundation.md  Phase-02-CLI-Browser-Flag.md  Phase-03-Config-File-Support.md  Phase-04-Lightpanda-Docker-Fix.md  Phase-05-Testing-Polish.md
.maestro/playbooks/Initiation/: Phase-01-Foundation-Prototype.md  Phase-02-Robustness-Error-Handling.md  Phase-03-Export-Documentation.md
.maestro/playbooks/re-python/: README.md
.opencode/: opencode.json
.opencode/plans/: change-gemini-api.md
.opencode/skills/intellisearch/: SKILL.md
.opencode/skills/intellisearch/references/: brave-search.md  ddg-search.md  deepwiki-tools.md  examples.md  (+4 more)
docs/: DEVELOPMENT.md  MULTI_PROFILE_PLAN.md  ROADMAP.md  TROUBLESHOOTING.md  delegated-architecture.md
examples/: sample_json_export.json  sample_markdown_export.md  usage_examples.sh
python/: pyproject.toml  wrapper.py
python/tests/: test_exporter.py
python/webgemini_cli/: __main__.py  auth_manager.py  config.py  exceptions.py  exporter.py  gemini_client.py
scripts/: demo.py
src/: auth.ts  browser-service.ts  browser.ts  cdp-client.ts  cli.ts  config-file.ts  config.ts  cookie-store.ts  docker.ts  errors.ts  exporter.ts  gemini-client.ts  index.ts  python-wrapper.ts
src/gemiterm/: __main__.py  auth_manager.py  cli.py  config.py  error_handlers.py  exceptions.py  exporter.py  gemini_client.py  logging_config.py  profile_resolver.py  validators.py
src/types/: gemini.ts  index.ts  wrapper.ts
src/webgemini_cli/: __main__.py  auth_manager.py  cli.py  gemini_client.py
src/webgemini_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: auth.test.ts  browser.test.ts  cli.test.ts  config.test.ts  conftest.py  cookie-store.test.ts  gemini-client.test.ts  python-wrapper.test.ts  test_auth_manager.py  test_cli.py  test_cli_auth_list_fetch.py  test_cli_continue_export.py  test_cli_delete.py  test_cli_install_status.py  test_export_all.py  test_exporter.py  test_gemini_client.py  test_multi_profile.py
